--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="heading">The Drum Kit</h1>
-    <div class="container">
+    <div id="container">
         <button class="box a">a</button>
         <button class="box s">s</button>
         <button class="box d">d</button>
